k8s/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kios-mock-pos-service-qa
  namespace: mock-pos-qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-buffering: 'off'
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/session-cookie-name: 'route'
    nginx.ingress.kubernetes.io/session-cookie-samesite: 'Lax'
    nginx.ingress.kubernetes.io/rewrite-target: /mockpos/$2
spec:
  ingressClassName: kios-backend-nginx
  rules:
    - http:
        paths:
          # Must match server.servlet.context-path (/mockpos) in application.yml
          - path: /mockpos(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kios-mock-pos-service-qa
                port:
                  number: 80
